# bzdownloader

./: .gitignore  pyproject.toml
bzdownloader/: bzdownloader.py
