[project]
name = "bzdownloader"
version = "0.1.0"
description = "TUI to download backblaze restore files"
authors = [
    { name = "Kyle Lexmond" }
]
dependencies = [
    "requests>=2.26.0",
    "tqdm>=4.62.3",
    "questionary>=1.10.0",
    "humanize>=3.13.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
bzdownloader = "bzdownloader.bzdownloader:main"

[project.optional-dependencies]
dev = [
    "black>=21.12b0",
    "pyre-check>=0.9.9",
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bzdownloader"]
